<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/backArrow"
            style="@style/ArrowBackIconStyle"
            android:contentDescription="@string/arrow_back"/>

        <TextView
            android:id="@+id/title"
            style="@style/SettingsTitleTextView"
            android:text="@string/list0"/>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_control"
        style="@style/SwitchView"
        android:text="@string/list1"
        android:paddingEnd="@dimen/Switch_padding_6"
        tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/share"
        style="@style/SettingsTextView"
        android:text="@string/list2"
        app:drawableEndCompat="@drawable/share"/>

    <TextView
        android:id="@+id/group"
        style="@style/SettingsTextView"
        android:text="@string/list3"
        app:drawableEndCompat="@drawable/group"/>

    <TextView
        android:id="@+id/agreement"
        style="@style/SettingsTextView"
        android:text="@string/list4"
        app:drawableEndCompat="@drawable/vector"/>

    <TextView
        android:id="@+id/phone"
        style="@style/SettingsTextView"
        android:text="@string/list5"
        app:drawableEndCompat="@drawable/phone"/>

    <TextView
        android:id="@+id/sms"
        style="@style/SettingsTextView"
        android:text="@string/sms"
        app:drawableEndCompat="@drawable/text_sms"/>

    <TextView
        android:id="@+id/textColor"
        style="@style/SettingsTextView"
        android:text="@string/set_textColor"
        app:drawableEndCompat="@drawable/format_color_text"/>

    <TextView
        android:id="@+id/backgroundColor"
        style="@style/SettingsTextView"
        android:text="@string/backgroundColor"
        app:drawableEndCompat="@drawable/background_color_fill"/>

    <TextView
        android:id="@+id/iconColor"
        style="@style/SettingsTextView"
        android:text="@string/iconColor"
        app:drawableEndCompat="@drawable/text_color_change"/>

</LinearLayout>